# bsc-utils

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt  setup.py
bsc_utils/: __init__.py  _config.py  _helpers.py  chat.py  config.py  crawl.py  database.py  exceptions.py  helpers.py  parallel.py  time.py  visual.py
bsc_utils/resources/: queries.py  sessions.json
tests/: conftest.py  test_chat.py  test_crawl.py  test_database.py  test_parallel.py  test_time.py  test_visual.py
