[tool.poetry]
authors = ["Trung Dang <dangtrung96@gmail.com>"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Utils for BSC Quants"
license = "MIT"
maintainers = ["Trung Dang <dangtrung96@gmail.com>"]
name = "bsc-utils"
readme = "README.md"
repository = "https://github.com/dang-trung/bsc-utils"
version = "1.0.3"

[tool.poetry.dependencies]
numpy = "^1.25.2"
oracledb = "^1.4.1"
pandas = "^2.1.0"
plotly = "^5.16.1"
psycopg2 = "^2.9.7"
pymssql = "^2.2.8"
pyodbc = "^4.0.39"
python = "^3.11"
python-dotenv = "^1.0.0"
skpy = "^0.10.6"
tqdm = "^4.66.1"
yfinance = "^0.2.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"
yapf = "^0.40.1"

[tool.pytest.ini_options]
addopts = "-vv -s --no-header -q"
env_files = [".env.dev"]
env_override_existing_values = "1"

[tool.yapf]
based_on_style = "facebook"
blank_line_before_nested_class_or_def = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
